# gromacs_py

./: .conda.yml  .conda_jupyter.yml  .conda_jupyter_no_gromacs.yml  .conda_no_gromacs.yml  .coverage  .gitignore  .tmp_conda.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  INSTALL.md  INSTALL.rst  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  conftest.py  coverage.xml  old_travis.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
conda/: meta.yaml
docs/: Makefile  conf.py  gmx_sys.rst  gmx_top.rst  gromacs_py.gmx.rst  gromacs_py.rst  gromacs_py.test.rst  gromacs_py.tools.rst  index.rst  installation.rst  modules.rst  readme.rst  requirements.txt  script.rst  tools.rst
docs/_static/: 1Y0M.html  1Y0M_em_traj.html
docs/notebook/: 00_basic_example.ipynb  01_dna_ligand_ambertools.ipynb  01_monitor_test.ipynb  02_cyclic_amber.ipynb  03_test_ligand_ambertools.ipynb  04_test_ligand_dna_ambertools.ipynb  05_test_ligand_ambertools_trypsin.ipynb  08_monitor_test.ipynb
gromacs_py/: .gitignore  __init__.py  create_peptide.py  create_top.py  equi_3_step.py  extend.py  free_ener.py  gmx.py  insert_mol.py  insert_mol_no_vmd.py  minimize_cyclic_pep.py  minimize_pdb.py  minimize_pdb_and_cyclic.py  prepare_prot.py  prepare_prot_topo_edit.py  production.py  sim_pep_prot.py  solvate_ions.py  test_gromacs_lib.py  test_gromacs_py.py  top_em_equi_3_step_prod.py
gromacs_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gromacs_py/doc/: conf.py  gmx_sys.rst  gmx_top.rst  index.rst  install.rst  readme.rst  script.rst  tools.rst
gromacs_py/gmx/: __init__.py  gmxsys.py  itp.py  rtp.py  topmol.py  topsys.py
gromacs_py/gromacs/: gmx5.py
gromacs_py/template/: equi.mdp  equi_charmm36.mdp  equi_charmm36_bilayer.mdp  equi_vsites.mdp  martini_v2.x_new-rf.mdp  mini.mdp
gromacs_py/test/: __init__.py  (+6 more)
notebook/: 00_basic_example.ipynb
(+58 files in other folders)
