[bumpversion]
current_version = 2.0.3
commit = True
tag = True

[metadata]
description-file = README.rst
license_files = LICENSE

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:gromacs_py/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:gromacs_py/gmx/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:gromacs_py/tools/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:conda/meta.yaml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:docs/conf.py]

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
